fixed groups warning, fixed some layout issues, fixed some naming inconsistenties

--- a/htdocs/layout/vb.css
+++ b/htdocs/layout/vb.css
@@ -48,6 +48,8 @@ h2
 	color: #444444;
 	font-size: 1.5em;
 	border-bottom: 1px solid #b8b8b8;
+	margin-bottom: 8px;
+	margin-top : 4px;
 }
 
 textarea
